--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,9 @@ body {
 }
 
 nav {
+    font-family: "Ubuntu", sans-serif;
+    font-weight: 700;
+    font-style: normal;
     background: linear-gradient(90deg, #1d1d1d, #4A4A4A);
     padding: 15px 20px;
     position: sticky;
@@ -20,26 +23,41 @@ nav {
 }
 
 .nav-container {
+    font-family: "Ubuntu", sans-serif;
+    font-weight: 700;
+    font-style: normal;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
 .nav-title {
+    font-family: "Ubuntu", sans-serif;
+    font-weight: 700;
+    font-style: normal;
     color: #ffffff;
     font-size: 2em;
 }
 
 .nav-links {
+    font-family: "Ubuntu", sans-serif;
+    font-weight: 700;
+    font-style: normal;
     list-style: none;
     display: flex;
 }
 
 .nav-links li {
+    font-family: "Ubuntu", sans-serif;
+    font-weight: 700;
+    font-style: normal;
     margin-left: 30px;
 }
 
 .nav-links a {
+    font-family: "Ubuntu", sans-serif;
+    font-weight: 700;
+    font-style: normal;
     color: #ffffff;
     text-decoration: none;
     padding: 10px 15px;
@@ -49,6 +67,9 @@ nav {
 }
 
 .nav-links a::after {
+    font-family: "Ubuntu", sans-serif;
+    font-weight: 700;
+    font-style: normal;
     content: '';
     position: absolute;
     width: 100%;
@@ -61,10 +82,16 @@ nav {
 }
 
 .nav-links a:hover {
+    font-family: "Ubuntu", sans-serif;
+    font-weight: 700;
+    font-style: normal;
     color: #50E3C2;
 }
 
 .nav-links a:hover::after {
+    font-family: "Ubuntu", sans-serif;
+    font-weight: 700;
+    font-style: normal;
     transform: scaleX(1);
 }
 
