--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 nav {
     font-family: "Ubuntu", sans-serif;
     font-weight: 700;
-    font-style: normal;
+    font-style: normal;    
     background: linear-gradient(90deg, #1d1d1d, #4A4A4A);
     padding: 15px 20px;
     position: sticky;
@@ -23,9 +23,6 @@ nav {
 }
 
 .nav-container {
-    font-family: "Ubuntu", sans-serif;
-    font-weight: 700;
-    font-style: normal;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -36,7 +33,7 @@ nav {
     font-weight: 700;
     font-style: normal;
     color: #ffffff;
-    font-size: 2em;
+    font-size: 2em; /* Updated font size */
 }
 
 .nav-links {
@@ -48,33 +45,28 @@ nav {
 }
 
 .nav-links li {
-    font-family: "Ubuntu", sans-serif;
-    font-weight: 700;
-    font-style: normal;
+    
     margin-left: 30px;
 }
 
 .nav-links a {
-    font-family: "Ubuntu", sans-serif;
-    font-weight: 700;
-    font-style: normal;
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 700;
+  font-style: normal;
     color: #ffffff;
     text-decoration: none;
     padding: 10px 15px;
-    border-radius: 5px;
-    position: relative;
-    transition: color 0.3s;
+    border-radius: 5px; /* Added border radius */
+    position: relative; /* Added position relative */
+    transition: color 0.3s; /* Updated transition properties */
 }
 
 .nav-links a::after {
-    font-family: "Ubuntu", sans-serif;
-    font-weight: 700;
-    font-style: normal;
     content: '';
     position: absolute;
     width: 100%;
     height: 3px;
-    background: #50E3C2;
+    background: #50E3C2; /* Added underline effect */
     left: 0;
     bottom: -5px;
     transform: scaleX(0);
@@ -84,15 +76,15 @@ nav {
 .nav-links a:hover {
     font-family: "Ubuntu", sans-serif;
     font-weight: 700;
-    font-style: normal;
-    color: #50E3C2;
+    font-style: normal;   
+    color: #50E3C2; /* Updated hover color */
 }
 
 .nav-links a:hover::after {
     font-family: "Ubuntu", sans-serif;
     font-weight: 700;
-    font-style: normal;
-    transform: scaleX(1);
+    font-style: normal;   
+    transform: scaleX(1); /* Added underline effect on hover */
 }
 
 .container {
