--- a/partner.css
+++ b/partner.css
@@ -14,7 +14,7 @@ nav {
     font-family: "Ubuntu", sans-serif;
     font-weight: 700;
     font-style: normal;    
-    background: linear-gradient(90deg, #1d1d1d, #4A4A4A);
+    background: linear-gradient(90deg, #417734, #59b455);
     padding: 15px 20px;
     position: sticky;
     top: 0;
